styles/style.css
#main {
  font-family: 'Open Sans', monospace;
  font-size: 24px;
  color: #850A29;
  background-color: #E6E6E6;
  text-align: center;
width: 95%;
  margin: auto;
padding: auto;
}

body {
background: #E6E6E6;
}
#title {
  font-size: 80px;
  text-transform: capitalize;
  font-weight: 600;
  padding: 2% 0;
  margin: 0 auto;
}
#img-div {
background: white;
display: flex;  
flex-direction: column;
padding: 20px 1% 5px 1%;
  margin: 0;
  align-items: center;
}

#image {
  width: 700px;
  max-width:100%;
  height: auto;
  margin: 0;
}
#img-caption {
  text-align: center;
  align-items: center;
  margin: 20px auto;
  font-size: 18px;
}

#tribute-info {
  color: #850A29;
  background: #E6E6E6;
  text-align: center;
  font-size: 22px;
  line-height: 40px;
  margin: 0;
  padding: 15% 20%;
}

#tribute-link-text {
width: 70vw;
margin: 25% auto 15% auto;
}
a:hover {
color: blue;
}
#tribute-info:hover {
background: #f2f0ee;
}

#career-stats {
display: flex;
flex-direction: column;
padding: 4%;
}

#career-stats-title {
text-align: center;
}

#stats {
display: flex;
flex-direction: row;
justify-content: space-evenly;
align-items: center;
padding: 4%;
}

#total-games {
display: flex;
flex-direction: column;
}

#Points-per-game {
display: flex;
flex-direction: column;
}

#total-rebounds {
display: flex;
flex-direction: column;
}

#Assists-per-game {
display: flex;
flex-direction: column;
}

.Two-Column-Container {
display: grid;
width: 500px;
margin: 11% auto;
grid-template-columns: 1fr 1fr;
grid-template-rows: 15vh repeat(6, 10vh);
grid-gap: 0.75em;
}

.Hall-of-Fame-Title {
    grid-area: 1/1/2/3;
    background: #850A29;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    
}

.Hall-of-Fame-items {
background: white;
display: flex;
align-items: center;
justify-content: center;
border-color: #850A29;
border-width: 2px;
border-style: solid;
}

@media (max-width: 700px) {
  .Two-Column-Container {
    display: flex;
    flex-direction: column;
    width: 250px;
  }

  .Hall-of-Fame-Title {
    height: 15vh;
}

  .Hall-of-Fame-items {
    height: 10vh;
    }

  }

